--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -147,12 +147,11 @@ footer a:hover {
     border-radius: 8px;
     overflow: hidden;
 }
-
-.card-img-left {
-    width: 200px; /* Ширина изображения */
-    object-fit: cover; /* Изображение будет обрезаться, чтобы заполнить контейнер */
+.card-img {
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
-
 .card-body {
     flex: 1; /* Позволяет тексту заполнять оставшуюся ширину */
     padding: 20px;
