--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -181,5 +181,22 @@ footer a:hover {
 
 
 
+/*-- pages --*/
+.pages-card-image{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+.page-image{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 5px;
+}
+
+
+
 
 
